# jamu-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  bot.py  compose.yml  config.py  docker-compose.yml  justfile  migrate_db.py  migrate_sqlite_to_postgres.py  models.py  pyproject.toml
.github/workflows/: ci.yml
bot/: __init__.py  config.py  database.py  main.py  models.py
bot/cogs/: help.py  quotes.py
cogs/: help.py  quotes.py
docs/: database-migration.md
migrations/: __init__.py  env.py
migrations/versions/: 1752351886_b34761c88524_initial_quotes_table.py  1781308800_a1b2c3d4e5f6_widen_snowflake_columns_to_bigint.py  1781308900_b2c3d4e5f6a7_use_timezone_aware_timestamps.py
scripts/: README.md  dev.sh  export_quotes.py  migrate_sqlite_to_postgres.py  prod.sh  production_migration.sh
tests/: conftest.py  test_config.py  test_migration.py  test_models.py
tests/cogs/: test_help.py  test_quotes.py
