[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jamu-bot"
version = "0.1.0"
description = "A Discord bot for managing quotes and more"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "discord.py>=2.3.2",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "types-aiofiles",
    "ruff>=0.1.0",
]

[project.scripts]
jamu-bot = "bot:main"

[tool.hatch.build.targets.wheel]
packages = ["cogs"]
artifacts = [
    "bot.py",
    "data/",
    "*.md",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "discord.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiosqlite.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["cogs"]
