[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jamu-bot"
version = "0.1.0"
description = "A Discord bot for managing quotes and more"
requires-python = ">=3.14"
dependencies = [
    "discord.py>=2.3.2",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
]


[project.scripts]
jamu-bot = "bot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff format
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["cogs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:discord.ext.commands.core",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-watch>=4.2.0",
    "ty>=0.0.49",
]
